--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +16,14 @@
 		<title>Hogwarts</title>
 		<header>
 			<div id="header-crest">
-				<img src="resources/hogwarts.png">
+				<img src="resources/hogwarts.png" alt="Hogwarts school crest">
 			</div>
 			<a href="#page-content" id="skip-link">Skip to main content</a>
 			<nav class="navbar navbar-inverse" id="main-menu">
 			  <div class="container container-fluid">
 			    <!-- Brand and toggle get grouped for better mobile display -->
 			    <div class="navbar-header">
-			      <h3 class="navbar-brand">Hogwarts School of Witchcraft and Wizardry</h3>
+			      <h1 class="navbar-brand">Hogwarts School of Witchcraft and Wizardry</h1>
 			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 			        <span class="sr-only">Toggle navigation</span>
 			        <span class="icon-bar"></span>
@@ -110,15 +110,15 @@
 				<p>Hogwarts School of Witchcraft and Wizardry is the British wizarding school, located in the Highlands of Scotland. It takes students from the United Kingdom of Great Britain and Northern Ireland, and Ireland.</p>
 				<p>The castle is located in the mountains near a loch. The precise location of the school can never be uncovered because it was rendered Unplottable. To Muggles, the school looks like an old abandoned castle. Similarly, most wizarding schools locations are protected in order to prevent their ways of teaching being revealed, as well as protect the students and schools themselves from any harm.</p>
 				<p>Established around the 10th century, Hogwarts is considered to be one of the finest magical institutions in the wizarding world, though other notable schools included Beauxbatons Academy of Magic and the Durmstrang Institute. Children with magical abilities are enrolled at birth, and acceptance is confirmed by owl post at age eleven. However, if the child in question is a Muggle-born, a professor from the school would come and inform the child's parents.</p>
-				<p>The school's motto is <span lang="zh">Draco Dormiens Nunquam Titillandus</span>, which, translated from Latin, means "Never tickle a sleeping dragon".</p>
+				<p>The school's motto is <span lang="la">Draco Dormiens Nunquam Titillandus</span>, which, translated from Latin, means "Never tickle a sleeping dragon".</p>
 			</main>
 
 			<aside class="col-md-4">
 				<h2>Notable Alumni</h2>
 				<ul type="square">
-					<li><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#">read more</a></li>
-					<li><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#">read more</a></li>
-					<li><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#">read more</a></li>
+					<li><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#">read more about Harry James Potter</a></li>
+					<li><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#">read more about Albus Dumbledore</a></li>
+					<li><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#">read more about Newt Scamander</a></li>
 					<li><strong>Hermione Granger</strong>, Minister of Magic</li>
 					<li><strong>Ronald Weasley</strong>, he's on a Chocolate Frog card</li>
 			</aside>
@@ -128,15 +128,22 @@
 
 		<footer id="page-footer">
 			<div class="container">
-
-				<table border="0" align="center">
-					<td class="col-md-2 col-sm-12">Resources</td>
+				<h4>Resources</h4>
+				<ul id="footer">
+					<li><a href="#">Owlmail</a></li>
+					<li><a href="#">academic calendar</a></li>
+					<li><a href="#">events</a></li>
+					<li><a href="#">regulations</a></li>
+					<li><a href="#">campus accessability</a></li>
+				</ul>
+				<!-- <table border="0" align="center">
+					<th class="col-md-2 col-sm-12">Resources</th>
 					<td class="col-md-2 col-sm-12"><a href="#">owlmail</a></td>
 					<td class="col-md-2 col-sm-12"><a href="#">academic calendar</a></td>
 					<td class="col-md-2 col-sm-12"><a href="#">events</a></td>
 					<td class="col-md-2 col-sm-12"><a href="#">regulations</a></td>
 					<td class="col-md-2 col-sm-12"><a href="#">campus accessibility</a></td>
-				</table>
+				</table> -->
 
 			</div>
 		</footer>
