--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<nav class="navbar navbar-inverse" id="main-menu">
 			  <div class="container container-fluid">
 			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
+			    <div class="navbar-header" tabindex="0">
 			      <h1 class="navbar-brand">Hogwarts School of Witchcraft and Wizardry</h1>
 			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 			        <span class="sr-only">Toggle navigation</span>
@@ -36,91 +36,91 @@
 			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav navbar-right">
-			        <li class="dropdown">
+			        <li class="dropdown" tabindex="0">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-			          	<li><a href="#">History</a></li>
-			            <li><a href="#">A letter from the headmistress</a></li>
+			          	<li tabindex="0"><a href="#">History</a></li>
+			            <li tabindex="0"><a href="#">A letter from the headmistress</a></li>
 			          </ul>
 			        </li>
 
-			        <li class="dropdown">
+			        <li class="dropdown" tabindex="0">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Staff <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-			          	<li><a href="#">Professors</a></li>
-			            <li><a href="#">House Elves</a></li>
-			            <li><a href="#">Groundskeepers</a></li>	    
+			          	<li tabindex="0"><a href="#">Professors</a></li>
+			            <li tabindex="0"><a href="#">House Elves</a></li>
+			            <li tabindex="0"><a href="#">Groundskeepers</a></li>	    
 			          </ul>
 			        </li>	        
 
-			        <li class="dropdown">
+			        <li class="dropdown" tabindex="0">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Houses <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-			          	<li><a href="#">Gryffindor</a></li>
-			            <li><a href="#">Ravenclaw</a></li>
-			            <li><a href="#">Hufflepuff</a></li>	    
-			            <li><a href="#">Slytherin</a></li>	    
+			          	<li tabindex="0"><a href="#">Gryffindor</a></li>
+			            <li tabindex="0"><a href="#">Ravenclaw</a></li>
+			            <li tabindex="0"><a href="#">Hufflepuff</a></li>	    
+			            <li tabindex="0"><a href="#">Slytherin</a></li>	    
 			          </ul>
 			        </li>	        
 
-			        <li class="dropdown">
+			        <li class="dropdown" tabindex="0">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-						<li><a href="#">Transfiguration</a></li>
-						<li><a href="#">Potions</a></li>
-						<li><a href="#">Charms</a></li>
-						<li><a href="#">Defense Against Dark Arts</a></li>
-						<li><a href="#">Herbology</a></li>
-						<li><a href="#">Astronomy</a></li>
-						<li><a href="#">Divination</a></li>
-						<li><a href="#">Muggle Studies</a></li>
-						<li><a href="#">Arithmancy</a></li>
-						<li><a href="#">Care of Magical Creatures</a></li>
-						<li><a href="#">History of Magic</a></li>
+						<li tabindex="0"><a href="#">Transfiguration</a></li>
+						<li tabindex="0"><a href="#">Potions</a></li>
+						<li tabindex="0"><a href="#">Charms</a></li>
+						<li tabindex="0"><a href="#">Defense Against Dark Arts</a></li>
+						<li tabindex="0"><a href="#">Herbology</a></li>
+						<li tabindex="0"><a href="#">Astronomy</a></li>
+						<li tabindex="0"><a href="#">Divination</a></li>
+						<li tabindex="0"><a href="#">Muggle Studies</a></li>
+						<li tabindex="0"><a href="#">Arithmancy</a></li>
+						<li tabindex="0"><a href="#">Care of Magical Creatures</a></li>
+						<li tabindex="0"><a href="#">History of Magic</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#"><abbr title="Ordinary Wizarding Levels">O.W.L.s</abbr></a></li>
-						<li><a href="#">N.E.W.T.s</a></li>
+						<li tabindex="0"><a href="#"><abbr title="Ordinary Wizarding Levels">O.W.L.s</abbr></a></li>
+						<li tabindex="0"><a href="#">N.E.W.T.s</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#">Apparition</a></li>
+						<li tabindex="0"><a href="#">Apparition</a></li>
 			          </ul>
 			        </li>
 
-			        <li><a href="#">Quidditch</a></li>
+			        <li tabindex="0"><a href="#">Quidditch</a></li>
 
-			        <li class="dropdown">
+			        <li tabindex="0" class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Directions <span class="caret"></span></a>
 			          <ul class="dropdown-menu">
-						<li><a href="#">Hogwarts Express</a></li>
-						<li><a href="#">Floo network</a></li>
-						<li><a href="#">Portkeys</a></li>
-						<li><a href="#">By broom</a></li>
-						<li><a href="#">Apparition</a></li>
+						<li tabindex="0"><a href="#">Hogwarts Express</a></li>
+						<li tabindex="0"><a href="#">Floo network</a></li>
+						<li tabindex="0"><a href="#">Portkeys</a></li>
+						<li tabindex="0"><a href="#">By broom</a></li>
+						<li tabindex="0"><a href="#">Apparition</a></li>
 			          </ul>
 			        </li>
 
-			        <li><a href="#">Contact Us</a></li>
+			        <li tabindex="0"><a href="#">Contact Us</a></li>
 			      </ul>
 			    </div><!-- /.navbar-collapse -->
 			  </div><!-- /.container-fluid -->
 			</nav>
 		</header>
 
-		<div id="page-content" class="container">
-			<main class="col-md-8">
+		<div id="page-content" class="container" tabindex="0">
+			<main class="col-md-8" tabindex="0">
 				<p>Hogwarts School of Witchcraft and Wizardry is the British wizarding school, located in the Highlands of Scotland. It takes students from the United Kingdom of Great Britain and Northern Ireland, and Ireland.</p>
 				<p>The castle is located in the mountains near a loch. The precise location of the school can never be uncovered because it was rendered Unplottable. To Muggles, the school looks like an old abandoned castle. Similarly, most wizarding schools locations are protected in order to prevent their ways of teaching being revealed, as well as protect the students and schools themselves from any harm.</p>
 				<p>Established around the 10th century, Hogwarts is considered to be one of the finest magical institutions in the wizarding world, though other notable schools included Beauxbatons Academy of Magic and the Durmstrang Institute. Children with magical abilities are enrolled at birth, and acceptance is confirmed by owl post at age eleven. However, if the child in question is a Muggle-born, a professor from the school would come and inform the child's parents.</p>
 				<p>The school's motto is <span lang="la">Draco Dormiens Nunquam Titillandus</span>, which, translated from Latin, means "Never tickle a sleeping dragon".</p>
 			</main>
 
-			<aside class="col-md-4">
+			<aside class="col-md-4" tabindex="0">
 				<h2>Notable Alumni</h2>
 				<ul type="square">
-					<li><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#">read more about Harry James Potter</a></li>
-					<li><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#">read more about Albus Dumbledore</a></li>
-					<li><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#">read more about Newt Scamander</a></li>
-					<li><strong>Hermione Granger</strong>, Minister of Magic</li>
-					<li><strong>Ronald Weasley</strong>, he's on a Chocolate Frog card</li>
+					<li tabindex="0"><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#">read more about Harry James Potter</a></li>
+					<li tabindex="0"><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#">read more about Albus Dumbledore</a></li>
+					<li tabindex="0"><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#">read more about Newt Scamander</a></li>
+					<li tabindex="0"><strong>Hermione Granger</strong>, Minister of Magic</li>
+					<li tabindex="0"><strong>Ronald Weasley</strong>, he's on a Chocolate Frog card</li>
 			</aside>
 		</div>
 
@@ -130,11 +130,11 @@
 			<div class="container">
 				<h3>Resources</h3>
 				<ul id="footer">
-					<li><a href="#">Owlmail</a></li>
-					<li><a href="#">academic calendar</a></li>
-					<li><a href="#">events</a></li>
-					<li><a href="#">regulations</a></li>
-					<li><a href="#">campus accessability</a></li>
+					<li tabindex="0"><a href="#">Owlmail</a></li>
+					<li tabindex="0"><a href="#">academic calendar</a></li>
+					<li tabindex="0"><a href="#">events</a></li>
+					<li tabindex="0"><a href="#">regulations</a></li>
+					<li tabindex="0"><a href="#">campus accessability</a></li>
 				</ul>
 				<!-- <table border="0" align="center">
 					<th class="col-md-2 col-sm-12">Resources</th>
