more accessability additions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown" tabindex="0">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
 			          	<li tabindex="0"><a href="#">History</a></li>
 			            <li tabindex="0"><a href="#">A letter from the headmistress</a></li>
@@ -45,7 +45,7 @@
 			        </li>
 
 			        <li class="dropdown" tabindex="0">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Staff <span class="caret"></span></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Staff <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
 			          	<li tabindex="0"><a href="#">Professors</a></li>
 			            <li tabindex="0"><a href="#">House Elves</a></li>
@@ -54,7 +54,7 @@
 			        </li>	        
 
 			        <li class="dropdown" tabindex="0">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Houses <span class="caret"></span></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Houses <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
 			          	<li tabindex="0"><a href="#">Gryffindor</a></li>
 			            <li tabindex="0"><a href="#">Ravenclaw</a></li>
@@ -64,7 +64,7 @@
 			        </li>	        
 
 			        <li class="dropdown" tabindex="0">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret"></span></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
 						<li tabindex="0"><a href="#">Transfiguration</a></li>
 						<li tabindex="0"><a href="#">Potions</a></li>
@@ -88,7 +88,7 @@
 			        <li tabindex="0"><a href="#">Quidditch</a></li>
 
 			        <li tabindex="0" class="dropdown">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Directions <span class="caret"></span></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Directions <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
 						<li tabindex="0"><a href="#">Hogwarts Express</a></li>
 						<li tabindex="0"><a href="#">Floo network</a></li>
@@ -130,11 +130,11 @@
 			<div class="container">
 				<h3>Resources</h3>
 				<ul id="footer">
-					<li tabindex="0"><a href="#">Owlmail</a></li>
-					<li tabindex="0"><a href="#">academic calendar</a></li>
-					<li tabindex="0"><a href="#">events</a></li>
-					<li tabindex="0"><a href="#">regulations</a></li>
-					<li tabindex="0"><a href="#">campus accessability</a></li>
+					<li tabindex="0" role="button"><a href="#">Owlmail</a></li>
+					<li tabindex="0" role="button"><a href="#">academic calendar</a></li>
+					<li tabindex="0" role="button"><a href="#">events</a></li>
+					<li tabindex="0" role="button"><a href="#">regulations</a></li>
+					<li tabindex="0" role="button"><a href="#">campus accessability</a></li>
 				</ul>
 				<!-- <table border="0" align="center">
 					<th class="col-md-2 col-sm-12">Resources</th>
