--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 			<aside class="col-md-4" tabindex="0">
 				<h2>Notable Alumni</h2>
 				<ul type="square">
-					<li tabindex="0"><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#">read more about Harry James Potter</a></li>
-					<li tabindex="0"><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#">read more about Albus Dumbledore</a></li>
-					<li tabindex="0"><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#">read more about Newt Scamander</a></li>
+					<li tabindex="0"><strong>Harry James Potter</strong>, survivor of the Killing Curse and vanquisher of the <b>dark wizard Voldemort</b> <a href="#" role="button">read more about Harry James Potter</a></li>
+					<li tabindex="0"><strong>Albus Percival Wulfric Brian Dumbledore</strong>, Headmaster of Hogwarts, defeated dark wizard Grindelwald in 1945, discovered 12 uses of dragon's blood, instrumental in Second Wizarding War <a href="#" role="button">read more about Albus Dumbledore</a></li>
+					<li tabindex="0"><strong>Newt Scamander</strong>, magizoologist and author of <em>Fantastic Beasts and Where to Find Them</em> <a href="#" role="button">read more about Newt Scamander</a></li>
 					<li tabindex="0"><strong>Hermione Granger</strong>, Minister of Magic</li>
 					<li tabindex="0"><strong>Ronald Weasley</strong>, he's on a Chocolate Frog card</li>
 			</aside>
