--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
 			          </ul>
 			        </li>
 
-			        <li tabindex="0"><a href="#">Quidditch</a></li>
+			        <li tabindex="0"><a href="#" role="button">Quidditch</a></li>
 
 			        <li tabindex="0" class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Directions <span class="caret" role="presentation"></span></a>
 			          <ul class="dropdown-menu">
-						<li tabindex="0"><a href="#">Hogwarts Express</a></li>
-						<li tabindex="0"><a href="#">Floo network</a></li>
-						<li tabindex="0"><a href="#">Portkeys</a></li>
-						<li tabindex="0"><a href="#">By broom</a></li>
-						<li tabindex="0"><a href="#">Apparition</a></li>
+						<li tabindex="0"><a href="#" role="button">Hogwarts Express</a></li>
+						<li tabindex="0"><a href="#" role="button">Floo network</a></li>
+						<li tabindex="0"><a href="#" role="button">Portkeys</a></li>
+						<li tabindex="0"><a href="#" role="button">By broom</a></li>
+						<li tabindex="0"><a href="#" role="button">Apparition</a></li>
 			          </ul>
 			        </li>
 
-			        <li tabindex="0"><a href="#">Contact Us</a></li>
+			        <li tabindex="0"><a href="#" role="button">Contact Us</a></li>
 			      </ul>
 			    </div><!-- /.navbar-collapse -->
 			  </div><!-- /.container-fluid -->
